--- a/admin/index.html
+++ b/admin/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h2>Kurdolingo – Admin Panel</h2>
+
     <form id="wordForm">
       <input type="text" id="kelime" placeholder="Kürtçe Kelime" required />
       <input type="text" id="anlam" placeholder="Türkçe Anlamı" required />
@@ -25,6 +26,10 @@
       <button type="submit">📥 Kaydet</button>
       <p id="sonuc"></p>
     </form>
+
+    <hr />
+    <h3>Kayıtlı Kelimeler</h3>
+    <div id="listeAlani"></div>
   </div>
 
   <script src="admin.js"></script>
