--- a/ders-detay.html
+++ b/ders-detay.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="ku">
+<html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ders Detayı</title>
-  <link rel="stylesheet" href="style/detay.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kurdolingo – Ders Detayı</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>Selamlaşma</h2>
-    <div id="card" class="card">
-      <h3 id="word">Slav</h3>
-      <p id="meaning">Merhaba</p>
-      <button id="playSound">🔊 Dinle</button>
+  <div class="ders-kutu">
+    <h2 id="dersAdi">Ders</h2>
+
+    <div class="kart">
+      <p class="kelime" id="word">Kelime</p>
+      <p class="anlam" id="meaning">Anlam</p>
+
+      <button id="playSound">🔈 Dinle</button>
     </div>
-    <button id="nextBtn">Sonraki</button>
+
+    <button id="nextBtn" class="btn-next">➡️ Sonraki</button>
+    <p id="xpKazanim" style="text-align:center; margin-top:10px;"></p>
   </div>
 
-  <script src="js/detay.js"></script>
+  <script src="detay.js"></script>
 </body>
 </html>
