--- a/magaza.html
+++ b/magaza.html
@@ -1,1 +1,22 @@
 
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kurdolingo – Mağaza</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="magaza-kutu">
+    <h2>🛍️ Mağaza</h2>
+    <p id="xpBilgi">XP: 0</p>
+
+    <div class="urunler" id="urunlerListesi">
+      <!-- JavaScript ile doldurulacak -->
+    </div>
+  </div>
+
+  <script src="magaza.js"></script>
+</body>
+</html>
